--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.13,<3.14"
 dependencies = [
+    "catboost>=1.2.8",
     "hypal-utils",
     "numpy>=2.4.1",
     "torch>=2.9.1",
@@ -17,6 +18,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pre-commit>=4.5.1",
+    "pytest>=9.0.2",
     "ruff>=0.14.10",
     "ty>=0.0.8",
 ]
