--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,14 @@ authors = [
 requires-python = ">=3.13,<3.14"
 dependencies = [
     "catboost>=1.2.8",
+    "celery>=5.6.2",
+    "fastapi>=0.129.0",
     "hypal-utils",
     "numpy>=2.4.1",
     "torch>=2.9.1",
     "tqdm>=4.67.3",
+    "uvicorn>=0.41.0",
+    "websockets>=16.0",
 ]
 
 [dependency-groups]
@@ -24,8 +28,4 @@ dev = [
 ]
 
 [tool.uv.sources]
-hypal-utils = { git = "https://github.com/EE-HyperAnalyzer/hypal_utils.git" }
-
-[build-system]
-requires = ["uv_build>=0.9.18,<0.10.0"]
-build-backend = "uv_build"
+hypal-utils = { git = "https://github.com/EE-HyperAnalyzer/hypal-utils.git" }
