--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,7 @@ dev = [
 
 [tool.uv.sources]
 hypal-utils = { git = "https://github.com/EE-HyperAnalyzer/hypal-utils.git" }
+
+[build-system]
+requires = ["uv_build>=0.10.4,<0.11.0"]
+build-backend = "uv_build"
